--- a/app/src/main/res/layout/activity_drop_screen.xml
+++ b/app/src/main/res/layout/activity_drop_screen.xml
@@ -20,10 +20,10 @@
         android:padding="5dp"
         android:text="设备加载中，请等待..." />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
