--- a/app/src/main/res/layout/activity_record_video_list.xml
+++ b/app/src/main/res/layout/activity_record_video_list.xml
@@ -29,12 +29,12 @@
         android:layout_weight="1">
 
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/record"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        </android.support.v7.widget.RecyclerView>
+        </androidx.recyclerview.widget.RecyclerView>
 
         <LinearLayout
             android:id="@+id/no_record"
